ironed out issues such as focus on sliders on mobile phone - now need to deal with the tapping on an empty effect - also the synchronization betweent he "effects" screen and the floorboard screen

--- a/css/effects.css
+++ b/css/effects.css
@@ -37,12 +37,13 @@
 }
 .percentIndicator  {
     width: 60px;
-    height: 20px;
+    height: 12px;
     margin: 10px auto;
     padding: 10px;
     position: relative;
     background-image: linear-gradient( to right, black, white 0% );
     text-align:center;
+    border: 1px solid black;
 }
 
 .param
@@ -78,4 +79,10 @@ ui-slider-input {
 }
 .ui-rangeslider .ui-rangeslider-sliders{
     margin: 0px; !important
+}
+
+.whiteonblack
+{
+    background-color:white;
+    color:black;
 }
